page load flickering fix

--- a/cordectropuss/www/light.css
+++ b/cordectropuss/www/light.css
@@ -140,25 +140,6 @@ button:hover {
     min-width: min-content;
 }
 
-#loadingScreen {
-    background: #e5e5e5;
-    position: absolute;
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column-reverse;
-}
-
-#loadingText {
-    width: fit-content;
-    height: fit-content;
-    font-size: xx-large;
-}
-
 .fadeOut {
     visibility: hidden;
     opacity: 0;
@@ -814,46 +795,3 @@ input:checked + .slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
-
-/*******************************************************************
-*                                                                  *
-*                  Some random loading animation                   *
-*                     I found on the internet                      *
-*                                                                  *
-*******************************************************************/
-
-.lds-ring {
-    display: inline-block;
-    position: relative;
-    width: 80px;
-    height: 80px;
-  }
-  .lds-ring div {
-    box-sizing: border-box;
-    display: block;
-    position: absolute;
-    width: 64px;
-    height: 64px;
-    margin: 8px;
-    border: 8px solid black;
-    border-radius: 50%;
-    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: black transparent transparent transparent;
-  }
-  .lds-ring div:nth-child(1) {
-    animation-delay: -0.45s;
-  }
-  .lds-ring div:nth-child(2) {
-    animation-delay: -0.3s;
-  }
-  .lds-ring div:nth-child(3) {
-    animation-delay: -0.15s;
-  }
-  @keyframes lds-ring {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
